# kodland-quiz

./: README.md  pyproject.toml
src/quiz/: app.py  inject_questions.py  models.py  questions.json
src/quiz/templates/: base.html  index.html  result.html
